# container-tutorial

./: .gitignore  README.md
1-docker/1-serving/: .dockerignore  Dockerfile  main.py  pyproject.toml
1-docker/1-serving/models/: model_20210512.pkl.cmp
1-docker/datascience/: Dockerfile  main.py
1-docker/ex-training/: Dockerfile  training.py
1-docker/ex-training/models/v1/: model_20190512.pkl.cmp
1-docker/fastapi/: README.md  main.py
1-docker/ubuntu/: Dockerfile
2-docker-compose/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
3-cloudrun/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test-scale.sh  test-switch.sh
3-kubernetes/: README.md  docker-compose.yml  pyproject.toml
